# sentragate

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
config/: policies.yaml
docs/: ARCHITECTURE.md  THREAT_MODEL.md
scripts/: mint_demo_token.py
src/sentragate/: config.py  main.py
src/sentragate/audit/: logger.py
src/sentragate/auth/: entra_validator.py
src/sentragate/guardrails/: content_inspector.py
src/sentragate/middleware/: rate_limiter.py
src/sentragate/policy/: engine.py
src/sentragate/proxy/: llm_client.py
tests/: test_auth_validator.py  test_content_inspector.py  test_policy_engine.py
